# tree-sitter-parsers

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  build.rs  clean  justfile  lang  parsers.toml  ref
.github/workflows/: bump-tree-sitter.yml  cd.yml  ruby-tree-sitter-pr.yml
package/: deb  zip
src/: build.rs  cli.rs  config.rs  consts.rs  display.rs  git.rs  lib.rs  logging.rs  main.rs  parser.rs  progress.rs  sh.rs  tree_sitter.rs
tests/: config.rs
update/: ref
